@@ -1,4 +1,5 @@
 v1.2.3 - Pending
+	+ Incorporate disc tag in album sorting (Emmanuel Viaud)
 	+ Added Italian translation (Gianni Vialetto)
 	+ Added Swedish translation (Daniel Nylander)
 	+ Bug: Czech translation incorrectly labeled Swedish
@@ -32,7 +33,7 @@ v1.2 - July 15, 2007
 	+ Bug: MPD_HOST variable doesn't work when it includes password
 
 v1.1.1 - May 18, 2007
-	+ Add Czech translation (Daniel Nylander)
+	+ Add Czech translation (Jakub Adler)
 	+ Bug: Incorrect artist can sometimes be set for album art/info (vEX)
 	+ Bug: Artwork isn't set when there is a single image in the song's dir
 	+ Bug: Improve handling under tiling WMs like ion3
